<resources>
    <string name="app_name">Ebediening</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="signup">Signup</string>
    <string name="connect_with">Connects with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="host_internet">No Internet Connection</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="retry">Please Retry</string>
    <string name="username_hint">Email</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="already_account">Already have an account?</string>
    <string name="fullname_hint">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_repassword">Repeat Password</string>
    <string name="agree_term_condition"><![CDATA[I Agree to the Terms & Conditions]]></string>
    <string name="order_history">Order History</string>
    <string name="track_order">Track Order</string>
    <string name="book_list">Booking List</string>
    <string name="notifications">Notifications</string>
    <string name="favourites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="check_in">Check In</string>
    <string name="delievery">Delivery</string>
    <string name="offers">Offers</string>
    <string name="near_by_you">Near by</string>
    <string name="book_table">Book A Table</string>
    <string name="see_all">See All</string>
    <string name="sort_by">Sort By</string>
    <string name="by_food">by Food</string>
    <string name="by_restaurent">by Restaurent</string>
    <string name="greetings">Greetings</string>
    <string name="you_are_at">You are at</string>
    <string name="swipeup_order">Swipe up to order</string>
    <string name="menu">Menu</string>
    <string name="explore">Explore</string>
    <string name="scan_table">Scan Table</string>
    <string name="exit">Exit</string>
    <string name="home_delievery">Home Delievery</string>
    <string name="reservation">reservation</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="submit">Submit</string>
    <string name="forgot_password_text">Please enter your email to\nReset your password</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <string name="android_desserts">Android Desserts</string>
    <string name="filter">Filter</string>
    <string name="reset">RESET</string>
    <string name="cost">Cost</string>
    <string name="rating">Rating</string>
    <string name="popularity">Popularity</string>
    <string name="distance">Distance</string>
    <string name="costing">Costing (For 2)</string>
    <string name="first_cost">0-300</string>
    <string name="fourth_cost">2500+</string>
    <string name="third_cost">1000-2500</string>
    <string name="second_cost">300-1000</string>
    <string name="rate_label">4+</string>
    <string name="cuisine">Cuisines</string>
    <string name="cuisine_type">italian,bakery</string>
    <string name="type">Type</string>
    <string name="type_label">Dhaba,Elite Res...</string>
    <string name="More_filters">More filters</string>
    <string name="open_now">Open Now</string>
    <string name="wifi">Wifi</string>
    <string name="alcohal_served">Alcohal Served</string>
    <string name="alcohal_not_served">Alcohal Not Served</string>
    <string name="rooftop_seating">Rooftop Seating</string>
    <string name="outdoors">Outdoors</string>
    <string name="buffey">Buffet Available</string>
    <string name="apply">Apply</string>

    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Order History</item>
        <item>Track Order</item>
        <item>Booking List</item>
        <item>Notifications</item>
        <item>Favorites</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!--string name="google_maps_key" templateMergeStrategy="preserve"
        translatable="false">AIzaSyC-e7dKqvSs48eT0k3YkTxtP4v1jbAT5tg</string-->

    <string name="google_maps_key">AIzaSyBG8QuIoeF1kB06cTMAph7dMtEZYScvr38</string>
    <string name="facebook_app_id">137715430392868</string>
    <string name="fb_login_protocol_scheme">fb137715430392868</string>
    <string name="radiobutton">RadioButton</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


</resources>
