<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:orientation="vertical"
    android:focusable="false"
    android:focusableInTouchMode="true"
    tools:context="com.ebediening.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="wrap_content"
                        android:layout_height="110dp"
                        android:src="@drawable/app_logo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@color/hint_color">

                        <EditText
                            android:id="@+id/input_fullname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/hint_color"
                            android:hint="@string/fullname_hint"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hint_color"
                            android:textSize="@dimen/text_small" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@color/hint_color">

                        <EditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/hint_color"
                            android:hint="@string/hint_email"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hint_color"
                            android:textSize="@dimen/text_small" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@color/hint_color">

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/hint_color"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            android:textColor="@color/white"
                            android:textColorHint="@color/light_gray"
                            android:textSize="@dimen/text_small" />
                    </android.support.design.widget.TextInputLayout>

                    <CheckBox
                        android:id="@+id/rb_term"
                        android:textColor="@color/login_btn"
                        android:text="@string/agree_term_condition"
                        android:button="@drawable/select_bg"
                        android:padding="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    </CheckBox>

                    <LinearLayout
                        android:id="@+id/linear_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/login_btn_rounded_corners"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/login_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="9dp"
                            android:text="@string/signup"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white" />
                    </LinearLayout>



                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/already_account"
        android:textColor="@color/hint_color"
        android:textSize="@dimen/text_small"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/signup_button"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/login_btn"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
