<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.ebediening.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="wrap_content"
                        android:layout_height="110dp"
                        android:src="@drawable/app_logo" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/forgot_password_text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_small"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@color/hint_color">

                        <EditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/hint_color"
                            android:hint="@string/hint_email"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hint_color"
                            android:textSize="@dimen/text_small" />
                    </android.support.design.widget.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/login_btn_rounded_corners"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/submit_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="9dp"
                            android:text="@string/submit"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/signup_button"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/login_btn"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
