<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:orientation="vertical"
    android:focusable="false"
    android:focusableInTouchMode="true"
    tools:context="com.ebediening.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="wrap_content"
                        android:layout_height="110dp"
                        android:src="@drawable/app_logo" />
                </LinearLayout>

                <TextView
                    android:id="@+id/connect_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/connect_with"
                    android:textSize="@dimen/text_extra_small"
                    android:textColor="@color/white" />
                //facebook/google

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <LinearLayout
                            android:id="@+id/linear_google"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/google_btn_rounded_corners"
                            android:gravity="center"
                            android:paddingBottom="7dp"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:paddingTop="7dp">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/google" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:singleLine="true"
                                android:text="@string/google"
                                android:textColor="@color/gray_dark"
                                android:textSize="@dimen/text_small"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/linear_fb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:background="@drawable/fb_btn_rounded_corners"
                            android:gravity="center"
                            android:paddingBottom="7dp"
                            android:paddingLeft="13dp"
                            android:paddingRight="13dp"
                            android:paddingTop="7dp">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/facebook" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:singleLine="true"
                                android:text="@string/facebook"
                                android:textColor="@color/white"
                                android:textSize="@dimen/text_small"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:textColorHint="@color/hint_color">

                        <EditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/hint_color"
                            android:hint="@string/username_hint"
                            android:text="pawan.qodemaker@gmail.com"
                            android:textColor="@color/white"
                            android:textColorHint="@color/hint_color"
                            android:textSize="@dimen/text_small" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColorHint="@color/hint_color">

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/hint_color"
                            android:hint="@string/hint_password"
                            android:text="ehu%uvat"
                            android:inputType="textPassword"
                            android:textColor="@color/white"
                            android:textColorHint="@color/light_gray"
                            android:textSize="@dimen/text_small" />
                    </android.support.design.widget.TextInputLayout>

                    <CheckBox
                        android:id="@+id/checkBoxLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/input_layout_password"
                        android:buttonTint="@color/login_btn"
                        android:text="Remember Me"
                        android:checked="false"
                        android:textColor="@color/login_btn" />

                    <TextView
                        android:layout_marginTop="10dp"
                        android:id="@+id/forgot_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/forgot_password"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_small"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:id="@+id/linear_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/login_btn_rounded_corners"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/login_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="9dp"
                            android:text="@string/login"
                            android:textAllCaps="true"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/no_account"
        android:textColor="@color/hint_color"
        android:textSize="@dimen/text_small"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/signup_button"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textColor="@color/login_btn"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
